# django-image-annotations

./: .gitignore  README.md  lint.sh  load_sample.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  template.env
.requirements/: requirements-dev.in  requirements.in
image_annotations/: apps.py  models.py
image_annotations/migrations/: 0001_initial.py
imageannotationsd/: asgi.py  openapi.json  settings.py  urls.py  wsgi.py
pannotations/: abc.py  apps.py
pannotationsd/: asgi.py  openapi.json  settings.py  urls.py  wsgi.py
server/: settings.py
spatiotemporal/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
spatiotemporal/db/: fields.py  functions.py
spatiotemporal/fixtures/: tycho.yaml
spatiotemporal/migrations/: 0000_extensions.py  0001_initial.py
