[project]
name = "django-image-annotations"
version = "1.0.0-alpha.1"
description = "A Django application to store and query image annotations in a variety of formats."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
  "django",
  "image annotation",
  "image classification",
  "machine learning",
  "artificial intelligence",
]
authors = [
  {name = "Kitware, Inc.", email = "rgd@kitware.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.0",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python",
]
dependencies = [
  "django",
  "djangorestframework",
]

[project.optional-dependencies]
test = [
  "black",
  "django-stubs",
  "djangorestframework-stubs",
  "isort",
  "mypy",
  "pyflakes",
]

[project.urls]
repository = "github.com/ResonantGeoData/django-image-annotations"
changelog = "github.com/ResonantGeoData/django-image-annotations/releases"
